moosified for the second release.  Changed from DCAT profile to FAIR profile.  Using OWL ontology instead of RDFS schema

--- a/Libraries/Perl/FAIR/Changes
+++ b/Libraries/Perl/FAIR/Changes
@@ -1,4 +1,7 @@
+
 {{$NEXT}}
+
+- Moosified and modified predicates to match the new OWL ontology created by Michel at the Hinxton hackathon
 
 0.001     2014-05-21 11:44:55 Europe/Madrid
 
