--- a/Libraries/Perl/FAIR/Changes
+++ b/Libraries/Perl/FAIR/Changes
@@ -1,6 +1,9 @@
-- updated to reflect new schema decided at the Harvard Dataverse meeting.  Major update!
+- created the test suite
 
 {{$NEXT}}
+
+- updated to reflect new schema decided at the Harvard Dataverse meeting.  Major update!
+
 
 - fixed some circular dependencies
 
