possible bug fix for Mac OSX - setting the default base URI for the Redland  RDF parsers

--- a/Libraries/Perl/FAIR/Changes
+++ b/Libraries/Perl/FAIR/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- set the base URI for the RDF parser since it is apparently important for the Redland libraries on OSX (but not on Ubuntu)
+
+
+==========
+
 - Bug Fixes
 
 
